# levipy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
lean/: LevyPy.lean  Main.lean  README.md  lakefile.toml
levipy/: __init__.py  covariant_derivative.py  lie_bracket.py
levipy/geometry/: __init__.py  covariant_derivative.py  lie_bracket.py  manifold.py
levipy/gr/: __init__.py  geodesic.py  parallel.py
levipy/lean4/: __init__.py  mathlib_linker.py  theorem_builder.py  translator.py
levipy/tensors/: __init__.py  christoffel.py  einstein.py  metric.py  ricci.py  riemann.py
tests/: test_lean4_bridge.py  test_levipy.py  test_translator_general.py
